<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAjustes"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Ajustes" />


    <TextView
        android:id="@+id/txtOrdenacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:textColor="#A3A0A0"
        android:text="@string/ordenacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjustes" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenacao"
        android:layout_width="348dp"
        android:layout_height="151dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrdenacao">

        <RadioButton
            android:id="@+id/radioOrdenacaoAZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/entrada"
            android:text="@string/alfabetica_az"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioOrdenacaoZA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/entrada"
            android:text="@string/alfabetica_za"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioOrdenacaoInsercao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/entrada"
            android:text="@string/ordem_incercao"
            android:textColor="@color/white" />
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>